@@ -53,10 +53,12 @@ Vicente Solsona Dellá
 
 BUG HUNTERS/SUGGESTIONS
 
+Bertalan Fodor
 Bob Broadus
 Chris Sawer
 Christian Ebert
 Darius Blasband
+David Bobroff
 Donald Axel
 Don Blaheta
 Edward Neeman
@@ -66,18 +68,22 @@ Frédéric Bron
 Hans Forbrich
 Joe Neeman
 Jukka Akkanen
+Kieren Richard MacMillan
 Lambros Lambrou
 Laura Conrad
 Mark Steinheuser
 Matevž Jekovec
 Michael Welsh Duggan
 Milan Zamazal
+Orm Finnendahl
 Patrick K Welton
+Paul Scott
 Ralph Little
 Scott Russell
 Sean Reed
 Steven Weber
 Sven Axelsson
+Thomas Scharkowski
 Thomas Bushnell BSG
 Trent Johnston
 Trevor Bača
